--- a/public/index.html
+++ b/public/index.html
@@ -22,26 +22,24 @@
     <meta name="msapplication-TileColor" content="#337AB7">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158083570-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158083570-xxx"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-158083570-2');
+      gtag('config', 'UA-158083570-xxx');
     </script>
 
     <!--- unique --->
-    <title>加々見 茉耶 official page</title>
-    <meta property="og:title"    content="加々見 茉耶 official page" />
-    <meta property="og:site_name"  content="加々見 茉耶 official page" />
-    <meta property="og:description"  content="加々見 茉耶(かがみ まや)　兵庫県生まれ。5歳よりピアノを始める。 兵庫県立西宮高等学校音楽科を卒業し、東京藝術大学音楽学部器楽科ピアノ専攻に入学。
-第1回 ロザリオ・マルチアーノ国際ピアノコンクール（ウィーン）第2位。併せてシューベルト賞を受賞。 " />
-    <meta property="og:image" content="https://kagamimaya.klavier.page/kagamimaya.jpg">
-    <meta property="og:url" content="https://kagamimaya.klavier.page">
-    <meta name="description" content="加々見 茉耶(かがみ まや)　兵庫県生まれ。5歳よりピアノを始める。 兵庫県立西宮高等学校音楽科を卒業し、東京藝術大学音楽学部器楽科ピアノ専攻に入学。
-第1回 ロザリオ・マルチアーノ国際ピアノコンクール（ウィーン）第2位。併せてシューベルト賞を受賞。">
-    <link rel="canonical" href="https://kagamimaya.klavier.page">
+    <title>神宮の杜音楽院／CJM Tokyo</title>
+    <meta property="og:title"    content="神宮の杜音楽院／CJM Tokyo" />
+    <meta property="og:site_name"  content="神宮の杜音楽院／CJM Tokyo" />
+    <meta property="og:description"  content="xxx" />
+    <meta property="og:image" content="tekitou.png">
+    <meta property="og:url" content="xxx">
+    <meta name="description" content="xxx">
+    <link rel="canonical" href="xxx">
   </head>
 
   <body id="body">
