--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
       gtag('config', 'UA-158083570-xxx');
     </script>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0&appId=160626627849426&autoLogAppEvents=1" nonce="jmR8QvEF"></script>
+    <script crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0&appId=160626627849426&autoLogAppEvents=1" nonce="jmR8QvEF"></script>
 
     <!--- unique --->
     <title>神宮の杜音楽院／CJM Tokyo</title>
