--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0&appId=160626627849426&autoLogAppEvents=1" nonce="jmR8QvEF"></script>
 
     <!--- unique --->
-    <title>神宮の杜音楽院／CJM Tokyo</title>
-    <meta property="og:title"    content="神宮の杜音楽院／CJM Tokyo" />
-    <meta property="og:site_name"  content="神宮の杜音楽院／CJM Tokyo" />
+    <title>神宮の杜音楽院</title>
+    <meta property="og:title"    content="神宮の杜音楽院" />
+    <meta property="og:site_name"  content="神宮の杜音楽院" />
     <meta property="og:description"  content="xxx" />
     <meta property="og:image" content="tekitou.png">
     <meta property="og:url" content="xxx">
