--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,7 @@
 
     <!--- common --->
     <!-- load -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/gridlex/2.3.1/gridlex.min.css">
-    <script
-            src="//code.jquery.com/jquery-2.2.4.min.js"
-            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-            crossorigin="anonymous">
-    </script>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="preload" onload="this.rel='stylesheet'" href="//cdnjs.cloudflare.com/ajax/libs/gridlex/2.3.1/gridlex.min.css">
 
     <!-- meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
