--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <!--- common --->
     <!-- load -->
-    <link rel="preload" onload="this.rel='stylesheet'" href="//cdnjs.cloudflare.com/ajax/libs/gridlex/2.3.1/gridlex.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/gridlex/2.3.1/gridlex.min.css">
 
     <!-- meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
