--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
     <meta property="og:type"   content="website" />
     <meta name="msapplication-TileColor" content="#337AB7">
 
+    <script
+        src="//code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous">
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158083570-xxx"></script>
     <script>
